syntax = "proto3";

option csharp_namespace = "InventoryService";

service GrpcInventoryService {
    rpc AddInventory (InventoryDto) returns (Empty);
    rpc UpdateInventory (InventoryDto) returns (InventoryDto);
    rpc DeleteInventory(InventoryDto) returns(Empty);
    rpc IncreaseInventory(InventoryChangeDto) returns (Empty);
    rpc DecreaseInventory(InventoryChangeDto) returns (Empty);
    rpc GetById(GetByIdParam) returns(InventoryDto);
    rpc GetByName(GetByNameParam) returns(InventoryDto);
}

message Empty {

}

message ListedInventories{
    repeated InventoryDto dto = 1;
}

message InventoryChangeDto{
    InventoryDto dto = 1;
    int32 amount = 2;
    string username = 3;
}

message InventoryDto {
    optional string id = 1;
    string name = 2;
    string description = 3;
    int32 in_stock = 4;
    float height = 5;
    float width = 6;
    float weight = 7;
}

message GetByIdParam{
    string id = 1;
}

message GetByNameParam{
    string name = 1;
}
